[tool.poetry]
name = "cldflex"
version = "0.1.1"
license = "Apache-2.0"
homepage = "https://fl.mt/cldflex"
repository = "https://github.com/fmatter/cldflex"
readme = "README.md"
description = "Convert FLEx data to CLDF-ready CSV."
authors = ["Florian Matter <flmt@mailbox.org>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/fmatter/cldflex/issues"


[tool.poetry.scripts]
cldflex = 'cldflex.cli:main'


[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^7.4.2"
colorlog = "^6.7.0"
beautifulsoup4 = "^4.12.2"
humidifier = "^0.0.2"
cldf-ldd = "^0.0.6"
clldutils = "^3.20.0"
cldfbench = "^1.14.0"
morphinder = "^0.0.2"

[tool.poetry.group.dev.dependencies]
keepachangelog = "^1.0.0"

pytest = "^7.4.2"
black = "^23.9.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.4"
invoke = "^2.2.0"
isort = "^5.12.0"
prospector = "^1.10.2"
writio = "^0.0.1"
coverage = "^7.3.2"
mkdocstrings = "^0.23.0"
markdown-include = "^0.8.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

